--- a/src/css/shopSummaryStyle.css
+++ b/src/css/shopSummaryStyle.css
@@ -1,35 +1,47 @@
-.waterStore{
+.water_shop{
     display: flex;
-    align-items:center;
+    flex-direction: row;
     height:2.1rem;
     padding:0 0.3rem;
     composes:bgColorF from '../Util/base.css';
+    background:#FFF;
 }
-.storePic{
+.shop_pic_protector{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin:0.25rem 0;
+    width: 1.6rem;
+    height:1.6rem;
+    overflow: hidden;
+}
+.shop_pic{
     width: 1.6rem;
     height: 1.6rem;
 }
-.storeName{
-    margin:0.32rem 0 0.2rem 0.2rem;
-    width: 5.1rem;
-    line-height:0.5rem;
+.shop_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex:1;
+    padding:0.27rem 0 0.27rem 0.4rem;
     composes:f30 c333 from '../Util/base.css';
+    background:url("../images/btn_right_arrow@2x.png") no-repeat right center;
+    background-size: 0.18rem 0.3rem;
 }
 .shop_name{
     composes:f32 from '../Util/base.css';
 }
-.month_sale{
+.shop_sale_info{
     display: flex;
-    background: url("../images/btn_right_arrow@2x.png") no-repeat right center;
-    background-size: 0.18rem 0.3rem;
     composes:f24 c999 from '../Util/base.css';
 }
 .sale_num{
     margin-left: 0.2rem;
 }
-.location{
-    display: flex;
-    background: url("../../src/images/address-05.png") no-repeat left center;
+.address_info{
+    display:flex;
+    background: url("../../src/images/address-05.png") no-repeat center left;
     background-size: 0.3rem;
     composes:f26 pl40 c999 from '../Util/base.css';
 }
