--- a/src/Util/base.css
+++ b/src/Util/base.css
@@ -64,15 +64,15 @@ table{
 
 .clearfix:after{
     display:block;
-    height:0px;
+    height:0;
     clear:both;
     content:".";
     visibility:hidden;
     zoom:1;
 }
 .triangleUp{
-    width:0px;
-    height:0px;
+    width:0;
+    height:0;
     border-left: 3px solid transparent;
     border-right: 3px solid transparent;
     border-bottom: 6px solid #888888;
