--- a/src/css/shopStyle.css
+++ b/src/css/shopStyle.css
@@ -5,3 +5,10 @@
     display: flex;
     flex-direction: row;
 }
+
+.shopping_cart{
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    background:#FFF;
+}
