--- a/src/css/shopStyle.css
+++ b/src/css/shopStyle.css
@@ -4,6 +4,7 @@
 .shopping_list{
     display: flex;
     flex-direction: row;
+    margin-top:0.3rem;
 }
 
 .shopping_cart{
@@ -11,4 +12,81 @@
     bottom: 0;
     width:100%;
     background:#FFF;
+}
+.notice{
+    display:flex;
+    margin:0.3rem 0 0 0.4rem;
+    composes: f22 from '../Util/huipayWaterBase.css';
+}
+.type_list{
+    background:#F8F8F8;
+    width:1.6rem;
+}
+.type_item{
+    height:1.1rem;
+    line-height:1.1rem;
+    composes:tc from '../Util/base.css';
+    composes:f28 from '../Util/huipayWaterBase.css';
+    border-bottom:0.01rem solid #D7D7D7;
+}
+.product_list{
+    flex:1;
+}
+.type_title{
+    composes:f28 from '../Util/huipayWaterBase.css';
+    color:#666;
+    height:0.6rem;
+    line-height:0.6rem;
+    border-bottom:0.01rem solid #D7D7D7;
+}
+.water_ticket{
+    display:flex;
+    flex-direction: row;
+    height:1.41rem;
+    margin:0.24rem 0.2rem 0 0.24rem;
+    overflow: hidden;
+}
+.ticket_left{
+    background:#FFF url('../images/shuipiao_bg_left@2x.png') no-repeat left center;
+    -webkit-background-size: auto 1.41rem;
+    background-size: auto 1.41rem;
+    display:flex;
+    flex-direction: row;
+}
+.water_ticket_img_product{
+    width:1rem;
+    height:1rem;
+    margin:0.2rem 0 0 0.16rem;
+    overflow: hidden;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.water_ticket_img{
+    width:100%;
+}
+.ticket_right{
+    background:#FFF url("../images/shuipiao_bg_right@2x.png") no-repeat right center;
+    -webkit-background-size: auto 1.41rem;
+    background-size: auto 1.41rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.product_item{
+    display: flex;
+    flex-direction: row;
+
+}
+.product_item_img_protect{
+    width:1.8rem;
+    height:1.8rem;
+    margin:0.3rem 0 0 0.2rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+.product_item_img{
+    width:100%;
 }
