--- a/src/Util/huipayWaterBase.css
+++ b/src/Util/huipayWaterBase.css
@@ -8,16 +8,16 @@
     background:#399cfe;
 }
 .nav_black{
-    background:#222;
+    color:#222;
 }
 .search_black{
-    background:#333;
+    color:#333;
 }
 .paragraph_black{
-    background:#666;
+    color:#666;
 }
 .help_black{
-    background:#999;
+    color:#999;
 }
 .border_black{
     background:#D7D7D7;
