--- a/src/css/shopStyle.css
+++ b/src/css/shopStyle.css
@@ -1,10 +1,18 @@
 .wrap{
     composes: wrap from '../Util/huipayWaterBase.css';
 }
+.shadow{
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:#000;
+    opacity: 0.2;
+}
 .shopping_list{
     display: flex;
     flex-direction: row;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .shopping_cart{
@@ -15,7 +23,7 @@
     bottom: 0.9rem;
     width:100%;
     background:#FFF;
-    z-index: 1;
+    z-index: 2;
     overflow: hidden;
 }
 .shopping_cart_title{
@@ -27,14 +35,16 @@
     border-bottom: 0.01rem solid #D7D7D7;
 }
 .shopping_cart_list{
-    flex:1;
     max-height: 4.72rem;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 .shopping_cart_product{
     display: flex;
     flex-direction: row;
-    padding:0.17rem 0;
+    justify-content: space-between;
+    align-items: center;
+    padding:0.17rem 0.2rem 0 0;
     margin-left: 0.25rem;
     border-bottom:0.01rem solid #D7D7D7;
 }
@@ -139,7 +149,8 @@
 }
 .type_title{
     display:flex;
-    margin:-0.02rem 0 0 0.2rem;
+    margin-left:0.2rem;
+    margin-top:-0.01rem;
     height:0.6rem;
     line-height:0.6rem;
     border-bottom:0.01rem solid #D7D7D7;
@@ -268,17 +279,12 @@
     line-height:0.42rem;
 }
 .product_increase{
+    margin-left:0.1rem;
     width:0.42rem;
     height:0.42rem;
-    line-height:0.42rem;
-    composes: tc from '../Util/base.css';
-    background:#399cfe;
-    -webkit-border-radius: 0.42rem;
-    -moz-border-radius: 0.42rem;
-    border-radius: 0.42rem;
-    color:#FFF;
-    font-size:0.4rem;
-    margin-left:0.1rem;
+    background: url("../images/increase@2x.png") no-repeat center;
+    -webkit-background-size: 0.42rem;
+    background-size: 0.42rem;
 }
 .product_count{
     margin-left:0.1rem;
@@ -288,19 +294,12 @@
     composes: tc from '../Util/base.css';
 }
 .product_reduce{
-    width:0.38rem;
-    height:0.38rem;
-    line-height:0.38rem;
-    -webkit-border-radius: 0.38rem;
-    -moz-border-radius: 0.38rem;
-    border-radius: 0.38rem;
-    composes: tc from '../Util/base.css';
-    background:#fff;
-    border:0.02rem solid #399cfe;
-    color: #399cfe;
-    font-size:0.4rem;
+    width:0.42rem;
+    height:0.42rem;
+    background: url("../images/reduce@2x.png") no-repeat center;
+    -webkit-background-size: 0.42rem;
+    background-size: 0.42rem;
 }
-
 .shop_footer{
     display:flex;
     flex-direction: row;
@@ -310,7 +309,7 @@
     width:100%;
     height:0.9rem;
     composes: search_black_bg from '../Util/huipayWaterBase.css';
-    z-index: 2;
+    z-index: 3;
 
 }
 .shopping_cart_info{
