--- a/src/css/productListDialogStyle.css
+++ b/src/css/productListDialogStyle.css
@@ -1,5 +1,27 @@
+.dialog_box{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    z-index: 16;
+
+}
+.shadow{
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    z-index: 8;
+    background:#000;
+    opacity: 0.4;
+}
 .product_list_dialog{
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
     position:fixed;
@@ -11,13 +33,24 @@
     -webkit-border-radius: 0.06rem;
     -moz-border-radius: 0.06rem;
     border-radius: 0.06rem;
+    z-index: 9;
 }
 .header{
+    position:relative;
     height:1rem;
     line-height: 1rem;
     font-size:0.34rem;
     color:#333;
     composes: tc from '../Util/base.css';
+}
+.close{
+    position:absolute;
+    right:0.1rem;
+    top:0;
+    height:1rem;
+    width:1rem;
+    line-height:1rem;
+    font-size:0.4rem;
 }
 .center{
 
@@ -38,6 +71,7 @@
     height:1.65rem;
 }
 .product_item{
+    padding: 0 0.25rem;
     height: 0.6rem;
     line-height:0.6rem;
     composes: tc from '../Util/base.css';
@@ -55,4 +89,36 @@
     align-items: center;
     background:#f3f3f3;
     height:1.1rem;
+}
+.price{
+    margin-left:0.3rem;
+    color:#ff2d2d;
+}
+.price_title{
+    font-size:0.2rem;
+}
+.price_real{
+    font-size:0.3rem;
+}
+.put_shopping_cart_btn{
+    margin-right:0.3rem;
+    height:0.63rem;
+    width:2.18rem;
+    composes:linear_blue_bg from "../Util/huipayWaterBase.css";
+    composes: tc from "../Util/base.css";
+    line-height:0.63rem;
+    -webkit-border-radius: 0.6rem;
+    -moz-border-radius: 0.6rem;
+    border-radius: 0.6rem;
+    font-size:0.3rem;
+    color:#fff;
+}
+.product_item_ctrl{
+    display: flex;
+    margin-right:0.3rem;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+    width:1.65rem;
+    line-height:0.42rem;
 }
