--- a/src/css/shopStyle.css
+++ b/src/css/shopStyle.css
@@ -6,7 +6,8 @@
     width:100%;
     height:100%;
     background:#000;
-    opacity: 0.2;
+    opacity: 0.4;
+    z-index:10;
 }
 .shopping_list{
     display: flex;
@@ -23,7 +24,7 @@
     bottom: 0.9rem;
     width:100%;
     background:#FFF;
-    z-index: 2;
+    z-index: 12;
     overflow: hidden;
 }
 .shopping_cart_title{
@@ -153,6 +154,7 @@
     composes:f28 from '../Util/huipayWaterBase.css';
 }
 .product_list{
+    position:relative;
     flex:1;
     padding-bottom:1.1rem;
 }
@@ -318,7 +320,7 @@
     width:100%;
     height:0.9rem;
     composes: search_black_bg from '../Util/huipayWaterBase.css';
-    z-index: 3;
+    z-index: 13;
 
 }
 .shopping_cart_info{
