--- a/src/css/receiveAddressListStyle.css
+++ b/src/css/receiveAddressListStyle.css
@@ -6,17 +6,18 @@
     padding-bottom: 1.3rem;
 }
 .address_nodes{
-    padding-bottom: 0.1rem;
-    composes:bgColorF mb30 from '../Util/base.css';
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height:1.2rem;
+    composes:bgColorF from '../Util/base.css';
+    border-bottom:0.01rem solid #D7D7D7;
 }
+
 .receiver_info{
-    padding-top: 0.2rem;
-    composes:bgColorF pl30 pr30 mb30  from '../Util/base.css';
-}
-.receiver_info{
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.1rem;
+    display:flex;
+    flex-direction: row;
+    padding-left:0.3rem;
     composes:f30 c333 from '../Util/base.css';
 }
 .telephone{
@@ -34,7 +35,6 @@
     overflow: hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
-    line-height: 0.5rem;
     composes:pl30 pr30 from '../Util/base.css';
 }
 .operate{
