--- a/src/css/addressListStyle.css
+++ b/src/css/addressListStyle.css
@@ -26,6 +26,10 @@
     line-height:0.8rem;
     composes: f28 from '../Util/huipayWaterBase.css';
     color:#333;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    flex:1;
 }
 .current_address_reset{
     padding:0 0.2rem 0 0.35rem;
@@ -45,8 +49,10 @@
 }
 .create_btn{
     composes: f28 from '../Util/huipayWaterBase.css';
-    padding:0 0.2rem 0 0.35rem;
+    padding:0 0.2rem 0 0.37rem;
     color:#399cfe;
-    line-height:0.8rem;
-    background:url("../images/receive-address-location-Icon@2x.png") no-repeat left center;
+    line-height:0.7rem;
+    background:url("../images/Newly-added@2x.png") no-repeat left center;
+    -webkit-background-size: 0.32rem;
+    background-size: 0.32rem;
 }
