--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -1,48 +1,131 @@
-.bb{border-bottom: 0.01rem solid #EEEFF3}
+.wrap{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#F3F5F7;
+}
+.pay_way{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top:0.3rem;
+    height:0.88rem;
+    line-height:0.88rem;
+    background:#FFF;
+}
+.pay_way_title{
+    composes: f30 from '../Util/huipayWaterBase.css';
+    color:#666;
+    padding-left:0.2rem;
+}
+.pay_way_selected{
+    composes: f26 from '../Util/huipayWaterBase.css';
+    color:#333;
+    padding-right:0.2rem;
+}
+
+
+.order{
+    margin-top:0.3rem;
+}
+.shop_name{
+    height:0.88rem;
+    line-height:0.88rem;
+    color:#333;
+    background:#FFF;
+    border-bottom:0.01rem solid #D7D7D7;
+}
+.name{
+    margin-left:0.2rem;
+    padding-left:0.4rem;
+    composes: f30 from '../Util/huipayWaterBase.css';
+    background:url("../images/shoppingcart_icon_station@2x.png") no-repeat left center;
+    -webkit-background-size: 0.3rem;
+    background-size: 0.3rem;
+}
 .shop_nodes_list{
-    margin-top: 0.3rem;
-    padding-bottom:1rem;
+}
+.water_ticket_list{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height:0.88rem;
+    line-height:0.88rem;
+    background:#FFF;
+}
+.water_ticket_title{
+    padding-left:0.2rem;
+    composes:f26 from '../Util/huipayWaterBase.css';
+    color:#666;
+}
+.water_ticket_used{
+    padding-right:0.2rem;
+    color:#ff2d2d;
+    composes:f26 from '../Util/huipayWaterBase.css';
 }
 .shop_nodes{
     composes:bgColorF from '../Util/base.css';
 }
 .product_nodes{
     display: flex;
-    align-items: center;
-    composes:bb;
+    flex-direction: row;
+    justify-content: center;
+    height:1.7rem;
+    background:#FFF;
+    border-bottom:0.01rem solid #D7D7D7;
 }
 .product_pic_box{
     display: flex;
-    align-items: center;
-    height:1.4rem;
-    width: 1.4rem;
-    margin: 0.2rem 0.3rem;
+    flex-direction: column;
+    justify-content: center;
+    height:1.3rem;
+    width: 1.3rem;
+    margin: 0.2rem;
     border:0.01rem solid #eee;
 }
 .product_pic{
     composes:w from '../Util/base.css';
 }
 .product_detail{
-    margin-top: 0.1rem;
-    margin-left: -0.1rem;
-    line-height: 0.4rem;
-    composes:f26 c333 from '../Util/base.css';
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex:1;
+    margin:0.2rem;
+    height:1.3rem;
 }
 .product_name{
     composes:f30 from '../Util/base.css';
 }
+.product_price{
+    display:flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+.product_price_title{
+    color:#ff2d2d;
+    composes: f26 from '../Util/huipayWaterBase.css';
+}
 .product_volume{
     composes:c999 from '../Util/base.css';
 }
-.product_sale{
-    composes:f30 from '../Util/base.css';
+.price{
+    composes:f36 from '../Util/huipayWaterBase.css';
+    color:#ff2d2d;
+}
+.count{
+    color:#333;
+    composes: f26 from '../Util/huipayWaterBase.css';
 }
 .charge{
     display: flex;
     justify-content:space-between;
     height: 0.7rem;
     line-height: 0.7rem;
-    composes:bb;
     composes:pl30 pr30 c333 from '../Util/base.css';
 }
 .charge_title{
@@ -76,19 +159,31 @@
     align-items: center;
     bottom:0;
     width: 100%;
-    height: 1rem;
-    line-height: 1rem;
-    composes:bgColorF pl30 from '../Util/base.css';
+    height: 0.96rem;
+    line-height: 0.96rem;
+    background:#FFF;
 }
 .statistics{
-    composes:f28 from '../Util/base.css';
+    composes:f26 from '../Util/huipayWaterBase.css';
+    color:#333;
+    padding-left:0.3rem;
 }
-.payable{
-    margin-left:0.3rem;
+.pay_title{
+    margin-left:0.36rem;
 }
+.total_price{
+    color:#ff2d2d;
+    composes:f26 from '../Util/huipayWaterBase.css';
+}
+
 .submit_order{
-    width: 3rem;
-    background: #FF4243;
+    width: 2.2rem;
+    height:0.96rem;
+    line-height: 0.96rem;
+    text-align: center;
+    composes:linear_red_bg from '../Util/huipayWaterBase.css';
+}
+.pay{
     color: #ffffff;
-    composes: tc f36 from '../Util/base.css';
+    composes:f36 from '../Util/huipayWaterBase.css';
 }
