增加付款成功页面，修改水票样式，增加验证码

--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -183,6 +183,13 @@
     text-align: center;
     composes:linear_red_bg from '../Util/huipayWaterBase.css';
 }
+.cant_submit_order{
+    width: 2.2rem;
+    height:0.96rem;
+    line-height: 0.96rem;
+    text-align: center;
+    background:#999;
+}
 .pay{
     color: #ffffff;
     composes:f36 from '../Util/huipayWaterBase.css';
