--- a/src/css/waterTicketsStyle.css
+++ b/src/css/waterTicketsStyle.css
@@ -1,3 +1,11 @@
+.wrap{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:#F3F5F7;
+}
 .water_ticket{
     display:flex;
     flex-direction: row;
@@ -7,11 +15,20 @@
 
 }
 .water_ticket_left{
-    height:1.4rem;
+    height:1.92rem;
     flex:138;
     display:flex;
     flex-direction: column;
     justify-content: center;
+    background:url("../images/shuipiao_bg_left@2x.png") no-repeat left center;
+    -webkit-background-size: auto 1.92rem;
+    background-size: auto 1.92rem;
+}
+.water_ticket_count{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    align-items: baseline;
 }
 .count{
     font-size:0.66rem;
@@ -23,12 +40,15 @@
     color:#399cfe;
 }
 .water_ticket_right{
-    height:1.4rem;
+    height:1.92rem;
     flex:385;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background: url("../images/shuipiao_bg_right@2x.png") no-repeat right center;
+    -webkit-background-size: auto 1.92rem;
+    background-size: auto 1.92rem;
 }
 .name{
     composes:f36 from '../Util/huipayWaterBase.css';
