--- a/src/css/inputAddressStyle.css
+++ b/src/css/inputAddressStyle.css
@@ -19,6 +19,11 @@
 .info_desc{
     composes:f30 c333 from '../Util/base.css';
 }
+.tag_list{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 .info_input{
     flex:1;
     margin-left: 0.1rem;
@@ -46,7 +51,7 @@
     composes:address_info;
 }
 .label_choose{
-    border: 0.01rem solid #EEEFF3;
+    border: 0.01rem solid #D7D7D7;
     height: 0.5rem;
     line-height: 0.5rem;
     width: 1.5rem;
@@ -60,6 +65,6 @@
     height: 0.8rem;
     line-height: 0.8rem;
     color: #ffffff;
-    background: #4dc0ff;
+    background: #399cfe;
     composes:tc f36 from '../Util/base.css';
 }
