修改部分bug 增加订单列表

--- a/src/css/createOrderStyle.css
+++ b/src/css/createOrderStyle.css
@@ -6,6 +6,7 @@
     height:100%;
     background:#F3F5F7;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 .pay_way{
     display: flex;
