--- a/src/css/productListDialogStyle.css
+++ b/src/css/productListDialogStyle.css
@@ -62,12 +62,12 @@
 .body_list{
     display:flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     margin:0 0.3rem;
     height:1.65rem;
 }
 .product_item{
+    margin-right:0.24rem;
     padding: 0 0.25rem;
     height: 0.6rem;
     line-height:0.6rem;
