--- a/src/css/receiveAddressListStyle.css
+++ b/src/css/receiveAddressListStyle.css
@@ -14,8 +14,12 @@
     justify-content: space-between;
     align-items: center;
     height:1.2rem;
+    flex:1;
     composes:bgColorF from '../Util/base.css';
     border-bottom:0.01rem solid #D7D7D7;
+}
+.selected_address{
+    flex:1;
 }
 .address_info{
     flex:1;
